# parcel-vue-rust-boilerplate

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vue.config.js
src/: App.vue  index.html
src/components/: HelloWorld.vue
src/router/: index.ts
src/views/: About.vue  Home.vue  Projects.vue
src/wasm/: Cargo.toml
src/wasm/src/: lib.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
